--- a/argo/app-parksmap.yaml
+++ b/argo/app-parksmap.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: default
     server: https://kubernetes.default.svc
-  project: default
+  project: app-parksmap
   source:
     directory:
       recurse: true
