--- a/cluster/console/console-link2.yaml
+++ b/cluster/console/console-link2.yaml
@@ -1,11 +1,11 @@
 apiVersion: console.openshift.io/v1
 kind: ConsoleLink
 metadata:
-  name: application-menu-anthem
+  name: application-menu-statefarm
 spec:
-  href: 'https://www.anthem.com/provider/medicare-advantage/'
+  href: 'https://www.statefarm.com'
   location: ApplicationMenu
-  text: Anthem Medicare Advantage
+  text: State Farm
   applicationMenu:
-    section: Healthcare
-    imageURL: https://www.anthem.com/assets/images/brands/top-logo-abcbs.svg
+    section: Insurance
+    imageURL: https://static1.st8fm.com/en_US/dxl-1x/prod/css/images/header/state-farm-logo-2.svg
